Fix nav font size on mobile

--- a/style.css
+++ b/style.css
@@ -35,11 +35,14 @@ nav ol {
 
 nav ol li {
     display: inline-block;
+    font-size: 1.4rem;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 img.profile {
-    height: 13rem;
-    width: 13rem;
+    height: 14rem;
+    width: 14rem;
     border-radius: 50%;
 }
 
